[package]
name = "af_nn5a"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
#strip=true
lto=true
codegen-units=1

[features]
tst = []   #compile with cargo build --features tst to run tests

[dependencies]
# For handling calculations and MNIST images
arrayfire = "3.8" #see .bashrc for export of ArrayFire link files
mnist = "0.6.0"
rand = "0.8.5"
num-traits = "0.2"
num="0.4"
num-integer = "0.1.46"
rust-mnist = "0.2"

# GUI
winit = "0.30.8"
wgpu = "24.0.1"
env_logger="0.11.6"
log = "0.4.25"
pollster = "0.4.0"
glam = "0.29.2"
bytemuck = { version = "1.21.0", features = ["derive"] }
